# Agentic-ai-notes

./: .gitignore  01_prompt_chaining.py  01_prompthchaining.js  02_conditionalWorkflow.js  02_routing.py  03_parallelization.py  03_parralal.js  03_simpleParallel.js  03_workingParallel.js  03_workingParallelFinal.js  04_refection.py  04_refection_flow.html  04_refection_flow.md  05_tool_api_request.js  05_tool_use.js  05_tool_use.py  06_planing.py  06_planing_langchain.py  06_planing_langgraph.py  06_strategic_executor.py  07_multi_agent_collaboration.py  08_memory_langchain.py  08_memory_langgraph.py  08_memory_management.py  AI_Agentic_Workflow_Guide.md  Agent_Design_Diagram.md  Beginner_Agent_Design_Guide.md  README.md  TOOL_CALLING_EXPLANATION.md  WHY_EXECUTE_TOOLS.md  basic.js  finalParallel.js  handsOnExample.js  package-lock.json  package.json  pyproject.toml  realProjectExample.js  reflection_loop_flow.md  simpleAgent.js  simplellm.js  (+4 more)
